argo/cluster/misc/ingext/chart/unraid.yaml
apiVersion: v1
kind: Service
metadata:
  name: unraid
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unraid
subsets:
  - addresses:
      - ip: 10.0.0.9
    ports:
      - port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unraid
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.plexmox.com
    nginx.ingress.kubernetes.io/auth-url: https://auth.plexmox.com/api/verify
spec:
  ingressClassName: internal
  rules:
    - host: unraid.plexmox.com
      http:
        paths:
          - backend:
              service:
                name: unraid
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - unraid.plexmox.com
      secretName: unraid-plexmox-com-tls
